$Id$

2003-10-24 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/input/avcodec: Added libavcodec input plugin
        * src/input/avcodec/avcodec.c: Now uses libavformat to read
          MP3 tags.

2003-10-23 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/input: Added a input plugin system
        * src/vorbis.c, src/input/vorbis: Move vorbis specific code
          to its own plugin

2003-10-22 Tilman Sauerbeck <tilman@code-monkey.de>
        * configure.ac: Fix OSS check, add checks for Solaris' audioio.h
          and ALSA
        * src/output/solaris: Added Solaris output plugin
        * src/output/alsa: Added ALSA output plugin
        * etc/Makefile.am, src/eplayer.c: We have a config file now

2003-10-21 Tilman Sauerbeck <tilman@code-monkey.de>
        * configure.ac: check for sys/soundcard.h to determine whether
          the OSS output plugin should be built
        * src/vorbis.c, src/output: added output plugin stuff to replace
          libao
        * src/output/oss/oss.c: added OSS output plugin
        * src/mixer.c, src/mixer.h: removed, mixer is controlled by the
          output plugin now
        * misc other stuff

2003-10-18 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/vorbis.c: track_open() initializes the "time_text"
          part, too
        * src/callbacks.c: when cb_track_next() is called after the
          last playlist item, it moves to the beginning again, without
          starting playback.
        * src/callbacks.c: cb_track_prev() does nothing when it's
          called on the beginning of the playlist

2003-10-17 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/mixer.c, src/mixer.h, src/eplayer.c, src/callbacks.c,
          interface.c:
          Rewrote mixer code, the mixer is periodically read now to
          reflect changes made by other applications
        * src/eplayer.c: Added _playback_start(), _playback_stop()
        * src/vorbis.c: The "time" part is updated in a sane