@@ -9,26 +9,25 @@
  *
  * @param udata Pointer to an ePlayer struct.
  */
-int track_play_chunk(void *udata) {
+void track_play_chunk(void *udata) {
 #define BUF_SIZE 65536
 	ePlayer *player = udata;
 	PlayListItem *pli = player->playlist->cur_item->data;
-	InputPlugin *plugin = pli->plugin;
 	int read;
 	static unsigned char pcmout[BUF_SIZE];
 
-	/* read the data ... */
-	if ((read = plugin->read(pcmout, BUF_SIZE))) {
-		/* ...and play it */
+	while (!player->playback_stop &&
+	       (read = pli->plugin->read(pcmout, BUF_SIZE))) {
 		player->output->play(pcmout, read);
-	} else /* EOF -> move to the next track */
+
+		pthread_mutex_lock(&pli->pos_mutex);
+		pli->current_pos = pli->plugin->get_current_pos();
+		pthread_mutex_unlock(&pli->pos_mutex);
+	}
+	
+	if (!player->playback_stop) /* EOF -> move to the next track */
 		edje_object_signal_emit(player->gui.edje,
 		                        "PLAY_NEXT", "next_button");
-
-	/* the edje callback will re-add the idler, so we can remove it here,
-	 * in case ov_read() failed
-	 */
-	return !!read;
 }
 
 int track_update_time(void *udata) {
@@ -37,7 +36,7 @@ int track_update_time(void *udata) {
 	static int old_time = -1;
 	int cur_time;
 
-	cur_time = current_item->plugin->get_current_pos();
+	cur_time = current_item->current_pos;
 	
 	if (player->cfg.time_display == TIME_DISPLAY_LEFT)
 		cur_time = current_item->duration - cur_time;
@@ -51,22 +50,18 @@ int track_update_time(void *udata) {
 	return 1;
 }
 
-static int prepare_output(ePlayer *player) {
-	PlayListItem *current = player->playlist->cur_item->data;
-
-	return player->output->configure(current->channels,
-	                                 current->sample_rate, 16);
-}
-
 /**
  * Closes the current track.
  *
  * @param player
  */
 void track_close(ePlayer *player) {
-	PlayListItem *pli = player->playlist->cur_item->data;
+	PlayListItem *pli;
 	
-	pli->plugin->close();
+	if (player->playlist) {
+		pli = player->playlist->cur_item->data;
+		pli->plugin->close();
+	}
 }
 
 /**
@@ -79,6 +74,7 @@ void track_open(ePlayer *player) {
 
 	assert(player->playlist->cur_item);
 	pli = player->playlist->cur_item->data;
+	pli->current_pos = 0;
 
 	pli->plugin->open(pli->file);
 
@@ -90,7 +86,7 @@ void track_open(ePlayer *player) {
 	                          pli->comment[COMMENT_ID_ALBUM]);
 	edje_object_part_text_set(player->gui.edje, "time_text", "0:00");
 
-	if (!prepare_output(player)) {
+	if (!player->output->configure(pli->channels, pli->sample_rate, 16)) {
 		fprintf(stderr, "Cannot configure output plugin\n");
 	
 		/* move to the next track */
